# libris

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v1.md  SECURITY.md  generate_textbook.py  run_dev.ps1  run_e2e_flow.py  run_lint.ps1  run_tests.ps1
backend/: pyproject.toml  requirements.txt
backend/evaluation/: main.py  run_benchmark.py
backend/evaluation/datasets/: __init__.py  benchmark.json  loader.py
backend/evaluation/fixtures/: __init__.py  mock_pipeline.py
backend/evaluation/golden/: baseline.json
backend/evaluation/metrics/: __init__.py  calculator.py
backend/evaluation/regression/: __init__.py  comparator.py
backend/evaluation/reports/: generator.py  regression_report.md  report.json  report.md
backend/evaluation/runner/: runner.py
backend/src/: __init__.py  main.py
backend/src/application/: __init__.py  container.py
backend/src/application/contracts/: __init__.py  dto.py
backend/src/application/evaluation/: __init__.py  schemas.py
backend/src/application/services/: __init__.py  ingestion_application_service.py  (+1 more)
backend/src/presentation/: __init__.py
backend/src/shared/: __init__.py
backend/tests/: test_api.py  test_application.py  test_chromadb_provider.py  test_chunking_engine.py  test_citation_engine.py  test_document_engine.py  test_domain.py  test_embedding_engine.py  test_evaluation.py  test_generation_engine.py  test_grounding_engine.py  test_indexing_engine.py  test_pypdf_provider.py  test_retrieval_engine.py  test_sentence_transformer_provider.py
docs/: PIPELINE.md  (+26 more)
(+138 files in other folders)
