[project]
name = "backend"
version = "0.1.0"
description = "Backend for Libris - An Explainable Knowledge Retrieval Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "loguru>=0.7.2",
    "python-multipart>=0.0.9",
    "chromadb>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "RUF"]
ignore = ["B008", "N818", "UP046"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
]
pythonpath = ["src"]
